03.ingress/sample-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
  annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
     
spec:
  rules:
  - host: ingress.local
    http:
      paths:
      - path: "/path1"
        pathType: Prefix
        backend:
          service:
            name: sample-ingress-svc-1
            port:
              number: 8888
